#                                               -*- Makefile -*-
#
#  Makefile.am
#
#  (C) Copyright 2005-2009 EDF-EADS-Phimeca
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License.
#
#  This library is distributed in the hope that it will be useful
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
#  @author: $LastChangedBy: dutfoy $
#  @date:   $LastChangedDate: 2009-06-30 16:14:10 +0200 (mar. 30 juin 2009) $
#  Id:      $Id: Makefile.am 1206 2009-06-30 14:14:10Z dutfoy $
#
include $(top_srcdir)/config/common.am

SUBDIRS      = analysis design modeling_notions
DIST_SUBDIRS = analysis design modeling_notions
